--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div id="mobileNav" class="inner">
                 <ul>
-                    <li onclick="window.location.href='#home'"><img src="assets/icons/homeicon.png" alt="Home">Home
+                    <li onclick="window.location.href='#mainHeaderWrapper'"><img src="assets/icons/homeicon.png" alt="Home">Home
                     </li>
                     <li onclick="window.location.href='#about'"><img src="assets/icons/abouticon.png" alt="About">About
                         VR Headset
@@ -46,7 +46,7 @@
                 </div>
                 <nav>
                     <ul id="mainNav">
-                        <li><a href="#home" class="active">Home</a></li>
+                        <li><a href="#mainHeaderWrapper" class="active">Home</a></li>
                         <li><a href="#about">About VR Headset</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="#pricing">Pricing</a></li>
@@ -439,7 +439,7 @@
                     <h2>Our Links</h2>
                     <nav>
                         <ul>
-                            <li><a href="#home" class="active">Home</a></li>
+                            <li><a href="#mainHeaderWrapper" class="active">Home</a></li>
                             <li><a href="#about">About VR Headset</a></li>
                             <li><a href="#features">Features</a></li>
                             <li><a href="#pricing">Pricing</a></li>
